# lost-pets-api

./: .flake8  README.md  insomnia_lost_pet.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: fastapi-app.yml
app/: main.py
app/core/: config.py
app/crud/: __init__.py  lost_pet_crud.py  user_crud.py
app/db/: database.py
app/model/: lost_pet.py  pet_owner.py
app/models/: __init__.py  lost_pet.py  user.py
app/schemas/: __init__.py  lost_pet.py  user.py
